--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <div id="google-scholar"><a href="https://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar Citations</a></div>
       <ul>
         <h3><strong>2025</strong></h3>
-           <li>Yuanhang Liu, Yanxing Huang, Yanqiao Wang, <span id="me">Peng Li</span>, Yang Liu. 2025. <br/> <span id="title">AI Mathematician: Towards Fully Automated Frontier Mathematical Research</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2505.22451">arXiv</a>] [<a href="talks/AIM-zh.pdf">Slides</a>]</li>
+           <li>Yuanhang Liu, Yanxing Huang, Yanqiao Wang, <span id="me">Peng Li</span>, Yang Liu. 2025. <br/> <span id="title">AI Mathematician: Towards Fully Automated Frontier Mathematical Research</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2505.22451">arXiv</a>] [<a href="talks/AIM-en.pdf">Slides</a>] [<a href="talks/AIM-zh.pdf">Slides (in Chinese)</a>]</li>
           <li>Ziyue Wang, Chi Chen, Fuwen Luo, Yurui Dong, Yuanchi Zhang, Yuzhuang Xu, Xiaolong Wang, <span id="me">Peng Li</span>, Yang Liu. 2025. <br/> <span id="title">ActiView: Evaluating Active Perception Ability for Multimodal Large Language Models</span>. <br/> To appear in <i>Proceedings of <b>ACL 2025</b></i>. [<a href="https://arxiv.org/abs/2410.04659">arXiv</a>] [<a href="https://github.com/THUNLP-MT/ActiView">code</a>]</li>
           <li>Xiaolong Wang, Yuanchi Zhang, Ziyue Wang, Yuzhuang Xu, Fuwen Luo, Yile Wang, <span id="me">Peng Li</span>, Yang Liu. 2025. <br/> <span id="title">Perspective Transition of Large Language Models for Solving Subjective Tasks</span>. <br/> To appear in <i><b>Findings of ACL 2025</b></i>. [<a href="https://arxiv.org/abs/2501.09265">arXiv</a>]</li>
           <li>Xuanyu Lei, Zonghan Yang, Xinrui Chen, <span id="me">Peng Li</span>, Yang Liu. 2025. <br/> <span id="title">Scaffolding Coordinates to Promote Vision-Language Coordination in Large Multi-Modal Models</span>. <br/> In <i>Proceedings of <b>COLING 2025</b></i>, 2886-2903. [<a href="https://aclanthology.org/2025.coling-main.195.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2402.12058">arXiv</a>] [<a href="https://github.com/THUNLP-MT/Scaffold">code</a>] [<a href="https://leixy20.github.io/scaffold_site/">Project Webpage</a>]</li>
@@ -305,7 +305,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: Jul 08, 2025.
+      Last-updated: Jul 12, 2025.
     </div>
   </body>
 </html>
