--- a/index.html
+++ b/index.html
@@ -73,12 +73,13 @@
     <section class="section" id="bio">
       <h2>About</h2>
       <p class="prose" itemprop="description">
-        Peng Li is a Research Associate Professor at the Institute for AI Industry Research (AIR), Tsinghua University. Before joining Tsinghua, he was a principal researcher and team leader at WeChat AI, Tencent. He also previously worked at Institute of Deep Learning (IDL), Baidu Inc. His research spans Large Language Models (LLMs), LLM-based Agents, and AI for mathematics (AI4Math). He has published over 90 papers in top-tier venues and received the Outstanding Paper Award at ACL 2023. His work ranks first on several influential benchmarks, surpassing teams from Google Research and OpenAI. He has led major scientific research projects, including a key task under the National Science and Technology Innovation - Major Program and the National Natural Science Foundation of China (NSFC) General Program. He has also served as an Area Chair for top-tier international conferences such as ACL, EMNLP, and NAACL. His research has been deployed in Baidu and WeChat, reaching tens of millions of users. He received the First Prize of the Qian Weichang Chinese Information Processing Science and Technology Award by the Chinese Information Processing Society of China (CIPS).
+        Peng Li is a Research Associate Professor at the Institute for AI Industry Research (AIR), Tsinghua University. Before joining Tsinghua, he was a principal researcher and team leader at WeChat AI, Tencent. He also previously worked at Institute of Deep Learning (IDL), Baidu Inc. His research spans Large Language Models (LLMs), LLM-based Agents, AI for mathematics (AI4Math), and Multimodal Large Language Models (MLLMs). He has published over 90 papers in top-tier venues and received the Outstanding Paper Award at ACL 2023. His work ranks first on several influential benchmarks, surpassing teams from Google Research and OpenAI. He has led major scientific research projects, including a key task under the National Science and Technology Innovation - Major Program and the National Natural Science Foundation of China (NSFC) General Program. He has also served as an Area Chair for top-tier international conferences such as ACL, EMNLP, and NAACL. His research has been deployed in Baidu and WeChat, reaching tens of millions of users. He received the First Prize of the Qian Weichang Chinese Information Processing Science and Technology Award by the Chinese Information Processing Society of China (CIPS).
       </p>
       <div class="chips" aria-label="research areas">
         <span class="chip">Large Language Models (LLMs)</span>
         <span class="chip">LLM-based Agents</span>
         <span class="chip">AI4Math</span>
+        <span class="chip">Multimodal Large Language Models (MLLMs)</span>
       </div>
       <p class="small" style="margin-top:10px"><strong>Address:</strong> 11/F, Block C, Qidi Science & Technology Building, Tsinghua Science Park, Haidian District, Beijing</p>
     </section>
@@ -629,7 +630,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Aug 10, 2025</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Aug 11, 2025</span></div>
     </footer>
   </div>
 
