--- a/index.html
+++ b/index.html
@@ -145,6 +145,18 @@
   <div class="pub-title">FormaRL: Enhancing Autoformalization with no Labeled Data</div>
   <div class="small">Yanxing Huang, Xinling Jin, Sijie Liang, Fuwen Luo, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">COLM 2025</span>. </div>
 </div><div class="item">
+  <div class="pub-title">MUCAR: Benchmarking Multilingual Cross-Modal Ambiguity Resolution for Multimodal Large Language Models</div>
+  <div class="small">Xiaolong Wang, Zhaolu Kang, Wangyuxuan Zhai, Xinyue Lou, Yunghwei Lai, Ziyue Wang, Yawen Wang, Kaiyu Huang, Yile Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">EMNLP 2025</span>. [<a href="https://arxiv.org/abs/2506.17046">arXiv</a>]</div>
+</div><div class="item">
+  <div class="pub-title">G2: Guided Generation for Enhanced Output Diversity in LLMs</div>
+  <div class="small">Zhiwen Ruan, Yixia Li, Yefeng Liu, Yun Chen, Weihua Luo, <strong>Peng Li</strong>, Yang Liu, Guanhua Chen. <span class="pub-venue">EMNLP 2025</span>. </div>
+</div><div class="item">
+  <div class="pub-title">DongbaMIE: A Multimodal Information Extraction Dataset for Evaluating Semantic Understanding of Dongba Pictograms</div>
+  <div class="small">Xiaojun Bi, Shuo Li, Junyao Xing, Ziyue Wang, Fuwen Luo, Weizheng Qiao, Lu Han, Ziwei Sun, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">Findings of EMNLP 2025</span>. [<a href="https://arxiv.org/abs/2503.03644">arXiv</a>] [<a href="https://github.com/thinklis/DongbaMIE">code</a>] [<a href="https://huggingface.co/datasets/thinklis/DongbaMIE">Dataset</a>]</div>
+</div><div class="item">
+  <div class="pub-title">PATIMT-Bench: A Multi-Scenario Benchmark for Position-Aware Text Image Machine Translation in Large Vision-Language Models</div>
+  <div class="small">Wanru Zhuang, Wenbo Li, Zhibin Lan, Xu Han, <strong>Peng Li</strong>, Jinsong Su. <span class="pub-venue">Findings of EMNLP 2025</span>. </div>
+</div><div class="item">
   <div class="pub-title">Agent-Environment Alignment via Automated Interface Generation</div>
   <div class="small">Kaiming Liu, Xuanyu Lei, Ziyue Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2505.21055">arXiv</a>] [<a href="talks/ALIGN-en.pdf">Slides</a>]</div>
 </div><div class="item">
@@ -163,17 +175,11 @@
   <div class="pub-title">A Survey of Efficient Reasoning for Large Reasoning Models: Language, Multimodality, and Beyond</div>
   <div class="small">Xiaoye Qu, Yafu Li, Zhaochen Su, Weigao Sun, Jianhao Yan, Dongrui Liu, Ganqu Cui, Daizong Liu, Shuxian Liang, Junxian He, <strong>Peng Li</strong>, Wei Wei, Jing Shao, Chaochao Lu, Yue Zhang, Xian-Sheng Hua, Bowen Zhou, Yu Cheng. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2503.21614">arXiv</a>] [<a href="https://github.com/XiaoYee/Awesome_Efficient_LRM_Reasoning">Project Webpage</a>]</div>
 </div><div class="item">
-  <div class="pub-title">DongbaMIE: A Multimodal Information Extraction Dataset for Evaluating Semantic Understanding of Dongba Pictograms</div>
-  <div class="small">Xiaojun Bi, Shuo Li, Junyao Xing, Ziyue Wang, Fuwen Luo, Weizheng Qiao, Lu Han, Ziwei Sun, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2503.03644">arXiv</a>] [<a href="https://github.com/thinklis/DongbaMIE">code</a>] [<a href="https://huggingface.co/datasets/thinklis/DongbaMIE">Dataset</a>]</div>
-</div><div class="item">
   <div class="pub-title">Scaling External Knowledge Input Beyond Context Windows of LLMs via Multi-Agent Collaboration</div>
   <div class="small">Zijun Liu, Zhennan Wan, <strong>Peng Li</strong>, Ming Yan, Ji Zhang, Fei Huang, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2505.21471">arXiv</a>] [<a href="https://github.com/THUNLP-MT/ExtAgents">code</a>]</div>
 </div><div class="item">
   <div class="pub-title">Writing-RL: Advancing Long-form Writing via Adaptive Curriculum Reinforcement Learning</div>
   <div class="small">Xuanyu Lei, Chenliang Li, Yuning Wu, Kaiming Liu, Weizhou Shen, <strong>Peng Li</strong>, Ming Yan, Ji Zhang, Fei Huang, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2506.05760">arXiv</a>] [<a href="https://github.com/Tongyi-Zhiwen/Writing-RL">code</a>]</div>
-</div><div class="item">
-  <div class="pub-title">MUCAR: Benchmarking Multilingual Cross-Modal Ambiguity Resolution for Multimodal Large Language Models</div>
-  <div class="small">Xiaolong Wang, Zhaolu Kang, Wangyuxuan Zhai, Xinyue Lou, Yunghwei Lai, Ziyue Wang, Yawen Wang, Kaiyu Huang, Yile Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2506.17046">arXiv</a>]</div>
 </div>
     </div>
   </div>
@@ -607,7 +613,7 @@
       <div class="grid grid-cols-2">
         <ul class="list">
           <li><strong>Senior Area Chair</strong>: AACL (2022)</li>
-          <li><strong>Area Chair</strong>: ACL (2024–2025), EMNLP (2024), NAACL (2024–2025), EACL (2024), COLING (2022)</li>
+          <li><strong>Area Chair</strong>:<!--ICLR (2025), --> ACL (2024–2025), EMNLP (2024), NAACL (2024–2025), EACL (2024), COLING (2022)</li>
           <li><strong>Action Editor</strong>: ACL Rolling Review (ARR)</li>
           <li><strong>PC Chair</strong>: YWCL (2010)</li>
           <li><strong>Tutorial Chair</strong>: CCL (2023), CCMT (2023, 2025)</li>
@@ -630,7 +636,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Aug 11, 2025</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Aug 21, 2025</span></div>
     </footer>
   </div>
 
