--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   <div class="small">Zhitao He, Zijun Liu, <strong>Peng Li</strong>, Yi R Fung, Ming Yan, Ji Zhang, Fei Huang, Yang Liu. <span class="pub-venue">COLM 2025</span>. [<a href="https://arxiv.org/abs/2502.14496">arXiv</a>] [<a href="https://github.com/THUNLP-MT/CollabUIAgents">code</a>] [<a href="talks/CollabUlAgents-zh.pdf">Slides (in Chinese)</a>]</div>
 </div><div class="item">
   <div class="pub-title">FormaRL: Enhancing Autoformalization with no Labeled Data</div>
-  <div class="small">Yanxing Huang, Xinling Jin, Sijie Liang, Fuwen Luo, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">COLM 2025</span>. </div>
+  <div class="small">Yanxing Huang, Xinling Jin, Sijie Liang, Fuwen Luo, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">COLM 2025</span>. [<a href="https://arxiv.org/abs/2508.18914">arXiv</a>] [<a href="https://github.com/THUNLP-MT/FormaRL">code</a>]</div>
 </div><div class="item">
   <div class="pub-title">MUCAR: Benchmarking Multilingual Cross-Modal Ambiguity Resolution for Multimodal Large Language Models</div>
   <div class="small">Xiaolong Wang, Zhaolu Kang, Wangyuxuan Zhai, Xinyue Lou, Yunghwei Lai, Ziyue Wang, Yawen Wang, Kaiyu Huang, Yile Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">EMNLP 2025</span>. [<a href="https://arxiv.org/abs/2506.17046">arXiv</a>]</div>
@@ -636,7 +636,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Aug 21, 2025</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Aug 27, 2025</span></div>
     </footer>
   </div>
 
