--- a/index.html
+++ b/index.html
@@ -113,16 +113,16 @@
   <div class="small">Yile Wang, Sijie Cheng, Zixin Sun, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">COLING 2025</span>, 5544-5557. [<a href="https://aclanthology.org/2025.coling-main.372.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2401.11725">arXiv</a>] [<a href="https://github.com/THUNLP-MT/symbol2language">code</a>]</div>
 </div><div class="item">
   <div class="pub-title">Dual-AEB: Synergizing Rule-Based and Multimodal Large Language Models for Effective Emergency Braking</div>
-  <div class="small">Wei Zhang, Pengfei Li, Junli Wang, Bingchuan Sun, Qihao Jin, Guangjun Bao, Shibo Rui, Yang Yu, Wenchao Ding, <strong>Peng Li</strong>, Yilun Chen. <span class="pub-venue">ICRA 2025</span>. [<a href="https://arxiv.org/abs/2410.08616">arXiv</a>] [<a href="https://github.com/ChipsICU/Dual-AEB">code</a>]</div>
+  <div class="small">Wei Zhang, Pengfei Li, Junli Wang, Bingchuan Sun, Qihao Jin, Guangjun Bao, Shibo Rui, Yang Yu, Wenchao Ding, <strong>Peng Li</strong>, Yilun Chen. <span class="pub-venue">ICRA 2025</span>, 14888-14895. [<a href="https://ieeexplore.ieee.org/abstract/document/11128453">pdf</a>] [<a href="https://arxiv.org/abs/2410.08616">arXiv</a>] [<a href="https://github.com/ChipsICU/Dual-AEB">code</a>]</div>
 </div><div class="item">
   <div class="pub-title">CoSpace: Benchmarking Continuous Space Perception Ability for Vision-Language Models</div>
-  <div class="small">Yiqi Zhu, Ziyue Wang, Can Zhang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">CVPR 2025</span>. [<a href="https://openaccess.thecvf.com/content/CVPR2025/papers/Zhu_CoSpace_Benchmarking_Continuous_Space_Perception_Ability_for_Vision-Language_Models_CVPR_2025_paper.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2503.14161">arXiv</a>] [<a href="https://github.com/THUNLP-MT/CoSpace">code</a>] [<a href="https://thunlp-mt.github.io/CoSpace/">Project Webpage</a>]</div>
+  <div class="small">Yiqi Zhu, Ziyue Wang, Can Zhang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">CVPR 2025</span>, 29569-29579. [<a href="https://openaccess.thecvf.com/content/CVPR2025/papers/Zhu_CoSpace_Benchmarking_Continuous_Space_Perception_Ability_for_Vision-Language_Models_CVPR_2025_paper.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2503.14161">arXiv</a>] [<a href="https://github.com/THUNLP-MT/CoSpace">code</a>] [<a href="https://thunlp-mt.github.io/CoSpace/">Project Webpage</a>]</div>
 </div><div class="item">
   <div class="pub-title">AdaMMS: Model Merging for Heterogeneous Multimodal Large Language Models with Unsupervised Coefficient Optimization</div>
-  <div class="small">Yiyang Du, Xiaochen Wang, Chi Chen, Jiabo Ye, Yiru Wang, <strong>Peng Li</strong>, Ming Yan, Ji Zhang, Fei Huang, Zhifang Sui, Maosong Sun, Yang Liu. <span class="pub-venue">CVPR 2025</span>. [<a href="https://openaccess.thecvf.com/content/CVPR2025/papers/Du_AdaMMS_Model_Merging_for_Heterogeneous_Multimodal_Large_Language_Models_with_CVPR_2025_paper.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2503.23733">arXiv</a>] [<a href="https://github.com/THUNLP-MT/AdaMMS">code</a>] [<a href="talks/AdaMMS-en.pdf">Slides</a>]</div>
+  <div class="small">Yiyang Du, Xiaochen Wang, Chi Chen, Jiabo Ye, Yiru Wang, <strong>Peng Li</strong>, Ming Yan, Ji Zhang, Fei Huang, Zhifang Sui, Maosong Sun, Yang Liu. <span class="pub-venue">CVPR 2025</span>, 9413-9422. [<a href="https://openaccess.thecvf.com/content/CVPR2025/papers/Du_AdaMMS_Model_Merging_for_Heterogeneous_Multimodal_Large_Language_Models_with_CVPR_2025_paper.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2503.23733">arXiv</a>] [<a href="https://github.com/THUNLP-MT/AdaMMS">code</a>] [<a href="talks/AdaMMS-en.pdf">Slides</a>]</div>
 </div><div class="item">
   <div class="pub-title">How Do Multimodal Large Language Models Handle Complex Multimodal Reasoning? Placing Them in An Extensible Escape Game</div>
-  <div class="small">Ziyue Wang, Yurui Dong, Fuwen Luo, Minyuan Ruan, Zhili Cheng, Chi Chen, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">ICCV 2025</span>. [<a href="https://arxiv.org/abs/2503.10042">arXiv</a>] [<a href="https://github.com/THUNLP-MT/EscapeCraft">code</a>] [<a href="talks/MM-Escape-en.pdf">Slides</a>] [<a href="videos/MM-Escape.mp4">Video</a>]</div>
+  <div class="small">Ziyue Wang, Yurui Dong, Fuwen Luo, Minyuan Ruan, Zhili Cheng, Chi Chen, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">ICCV 2025</span>. [<a href="https://arxiv.org/abs/2503.10042">arXiv</a>] [<a href="https://github.com/THUNLP-MT/EscapeCraft">code</a>] [<a href="talks/MM-Escape-en.pdf">Slides</a>] [<a href="videos/MM-Escape.mp4">Video</a>] [<a href="https://x.com/Tsinghua_Uni/status/1960372139967516889">Media 1</a>] [<a href="https://www.facebook.com/Tsinghua/posts/pfbid0tEaC28Bu7ZtK1YijcbKx8YBFqS8TWtUDMLDkUnRpVjQ4ZuZV8x1s1NQ79yFkY8j9l?rdid=NlLe9tMS5wmyBLYR#">Media 2</a>]</div>
 </div><div class="item">
   <div class="pub-title">LVAgent: Long Video Understanding by Multi-Round Dynamical Collaboration of MLLM Agents</div>
   <div class="small">Boyu Chen, Zhengrong Yue, Siran Chen, Zikang Wang, Yang Liu, <strong>Peng Li</strong>, Yali Wang. <span class="pub-venue">ICCV 2025</span>. [<a href="https://arxiv.org/abs/2503.10200">arXiv</a>]</div>
@@ -636,7 +636,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Aug 27, 2025</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Sep 08, 2025</span></div>
     </footer>
   </div>
 
