--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
   <div class="pub-title">PATIMT-Bench: A Multi-Scenario Benchmark for Position-Aware Text Image Machine Translation in Large Vision-Language Models</div>
   <div class="small">Wanru Zhuang, Wenbo Li, Zhibin Lan, Xu Han, <strong>Peng Li</strong>, Jinsong Su. <span class="pub-venue">Findings of EMNLP 2025</span>. </div>
 </div><div class="item">
+  <div class="pub-title">Beyond the Surface: Enhancing LLM-as-a-Judge Alignment with Human via Internal Representations</div>
+  <div class="small">Peng Lai, Jianjie Zheng, Sijie Cheng, Yun Chen, <strong>Peng Li</strong>, Yang Liu, Guanhua Chen. <span class="pub-venue">NeurIPS 2025</span>. </div>
+</div><div class="item">
   <div class="pub-title">Agent-Environment Alignment via Automated Interface Generation</div>
   <div class="small">Kaiming Liu, Xuanyu Lei, Ziyue Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2505.21055">arXiv</a>] [<a href="talks/ALIGN-en.pdf">Slides</a>]</div>
 </div><div class="item">
@@ -636,7 +639,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Sep 08, 2025</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Sep 19, 2025</span></div>
     </footer>
   </div>
 
