--- a/index.html
+++ b/index.html
@@ -616,16 +616,16 @@
       <div class="grid grid-cols-2">
         <ul class="list">
           <li><strong>Senior Area Chair</strong>: AACL (2022)</li>
-          <li><strong>Area Chair</strong>:<!--ICLR (2025), --> ACL (2024–2025), EMNLP (2024), NAACL (2024–2025), EACL (2024), COLING (2022)</li>
+          <li><strong>Area Chair</strong>:<!--ICLR (2026), --> ACL (2024–2025), EMNLP (2024), NAACL (2024–2025), EACL (2024), COLING (2022)<!--, AACL (2025)--></li>
           <li><strong>Action Editor</strong>: ACL Rolling Review (ARR)</li>
           <li><strong>PC Chair</strong>: YWCL (2010)</li>
           <li><strong>Tutorial Chair</strong>: CCL (2023), CCMT (2023, 2025)</li>
-        </ul>
-        <ul class="list">
           <li><strong>Demonstration Chair</strong>: CCL (2024)</li>
           <li><strong>Frontier Forum Chair</strong>: CCMT (2024)</li>
           <li><strong>Publicity Chair</strong>: CCL (2025)</li>
-          <li><strong>Reviewer / PC Member</strong>: NeurIPS (2022–2025), ICML (2022–2025), ICLR (2024–2025), ACL (2014, 2021–2023), EMNLP (2014, 2021–2023, 2025), NAACL (2018), CVPR (2023–2025), ICCV (2023, 2025), ECCV (2024), AAAI (2022–2025), IJCAI (2022–2024), COLING (2020, 2024, 2025), BMVC (2024), COLM (2024–2025), ICRA (2025), ACM TIST (2015), TACL (Standing Reviewer), Acta Automatica Sinica</li>
+        </ul>
+        <ul class="list">
+          <li><strong>Reviewer / PC Member</strong>: NeurIPS (2022–2025), ICML (2022–2025), ICLR (2024–2025), ACL (2014, 2021–2023), EMNLP (2014, 2021–2023), NAACL (2018), CVPR (2023–2025), ICCV (2023, 2025), ECCV (2024), AAAI (2022–2025), IJCAI (2022–2024), COLING (2020, 2024, 2025), BMVC (2024), COLM (2024–2025), ICRA (2025-2026), ACM TIST (2015), TACL (Standing Reviewer), Acta Automatica Sinica</li>
         </ul>
       </div>
     </section>
@@ -639,7 +639,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Sep 19, 2025</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Sep 28, 2025</span></div>
     </footer>
   </div>
 
