--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
   <div class="small">Bingshuai Liu, Ante Wang, Zijun Min, Chenyang Lyu, Longyue Wang, Zhihao Wang, Xu Han, <strong>Peng Li</strong>, Jinsong Su. <span class="pub-venue">ACMMM 2025</span>. </div>
 </div><div class="item">
   <div class="pub-title">Advancing Language Multi-Agent Learning with Credit Re-Assignment for Interactive Environment Generalization</div>
-  <div class="small">Zhitao He, Zijun Liu, <strong>Peng Li</strong>, Yi R Fung, Ming Yan, Ji Zhang, Fei Huang, Yang Liu. <span class="pub-venue">COLM 2025</span>. [<a href="https://arxiv.org/abs/2502.14496">arXiv</a>] [<a href="https://github.com/THUNLP-MT/CollabUIAgents">code</a>] [<a href="talks/CollabUlAgents-zh.pdf">Slides (in Chinese)</a>]</div>
+  <div class="small">Zhitao He, Zijun Liu, <strong>Peng Li</strong>, Yi R Fung, Ming Yan, Ji Zhang, Fei Huang, Yang Liu. <span class="pub-venue">COLM 2025</span>. [<a href="https://openreview.net/pdf?id=SoEmgM1ioC">pdf</a>] [<a href="https://arxiv.org/abs/2502.14496">arXiv</a>] [<a href="https://github.com/THUNLP-MT/CollabUIAgents">code</a>] [<a href="talks/CollabUlAgents-zh.pdf">Slides (in Chinese)</a>]</div>
 </div><div class="item">
   <div class="pub-title">FormaRL: Enhancing Autoformalization with no Labeled Data</div>
-  <div class="small">Yanxing Huang, Xinling Jin, Sijie Liang, Fuwen Luo, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">COLM 2025</span>. [<a href="https://arxiv.org/abs/2508.18914">arXiv</a>] [<a href="https://github.com/THUNLP-MT/FormaRL">code</a>]</div>
+  <div class="small">Yanxing Huang, Xinling Jin, Sijie Liang, Fuwen Luo, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">COLM 2025</span>. [<a href="https://openreview.net/pdf?id=Z2El1U94bq">pdf</a>] [<a href="https://arxiv.org/abs/2508.18914">arXiv</a>] [<a href="https://github.com/THUNLP-MT/FormaRL">code</a>]</div>
 </div><div class="item">
   <div class="pub-title">MUCAR: Benchmarking Multilingual Cross-Modal Ambiguity Resolution for Multimodal Large Language Models</div>
   <div class="small">Xiaolong Wang, Zhaolu Kang, Wangyuxuan Zhai, Xinyue Lou, Yunghwei Lai, Ziyue Wang, Yawen Wang, Kaiyu Huang, Yile Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">EMNLP 2025</span>. [<a href="https://arxiv.org/abs/2506.17046">arXiv</a>]</div>
@@ -639,7 +639,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Sep 30, 2025</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Oct 05, 2025</span></div>
     </footer>
   </div>
 
