--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
       <div class="grid">
         <ul class="list responsive-cols">
           <li><strong>Senior Area Chair</strong>: AACL (2022)</li>
-          <li><strong>Area Chair</strong>:<!--ICLR (2026), --> ACL (2024–2025), EMNLP (2024), NAACL (2024–2025), EACL (2024), COLING (2022)<!--, AACL (2025)--></li>
+          <li><strong>Area Chair</strong>: ICLR (2026), ACL (2024–2025), EMNLP (2024), NAACL (2024–2025), EACL (2024), COLING (2022)<!--, AACL (2025)--></li>
           <li><strong>Action Editor</strong>: ACL Rolling Review (ARR)</li>
           <li><strong>PC Chair</strong>: YWCL (2010)</li>
           <li><strong>Tutorial Chair</strong>: CCL (2023), CCMT (2023, 2025)</li>
@@ -675,7 +675,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Oct 05, 2025</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Oct 10, 2025</span></div>
     </footer>
   </div>
 
