--- a/index.html
+++ b/index.html
@@ -198,20 +198,23 @@
   <div class="pub-title">Beyond the Surface: Enhancing LLM-as-a-Judge Alignment with Human via Internal Representations</div>
   <div class="small">Peng Lai, Jianjie Zheng, Sijie Cheng, Yun Chen, <strong>Peng Li</strong>, Yang Liu, Guanhua Chen. <span class="pub-venue">NeurIPS 2025</span>. </div>
 </div><div class="item">
-  <div class="pub-title">Agent-Environment Alignment via Automated Interface Generation</div>
-  <div class="small">Kaiming Liu, Xuanyu Lei, Ziyue Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2505.21055">arXiv</a>] [<a href="talks/ALIGN-en.pdf">Slides</a>]</div>
+  <div class="pub-title">Bridging Vision, Language, and Mathematics: Pictographic Character Reconstruction with Bézier Curves</div>
+  <div class="small">Zihao Wan, Pau Tong Lin Xu, Fuwen Luo, Ziyue Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">The 5th Workshop on Mathematical Reasoning and AI (MATH-AI 2025)</span>. </div>
 </div><div class="item">
   <div class="pub-title">MUSEG: Reinforcing Video Temporal Understanding via Timestamp-Aware Multi-Segment Grounding</div>
-  <div class="small">Fuwen Luo, Shengfeng Lou, Chi Chen, Ziyue Wang, Chenliang Li, Weizhou Shen, Jiyue Guo, <strong>Peng Li</strong>, Ming Yan, Ji Zhang, Fei Huang, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2505.20715">arXiv</a>]</div>
+  <div class="small">Fuwen Luo, Shengfeng Lou, Chi Chen, Ziyue Wang, Chenliang Li, Weizhou Shen, Jiyue Guo, <strong>Peng Li</strong>, Ming Yan, Fei Huang, Yang Liu. <span class="pub-venue">NeurIPS 2025 Workshop on Multimodal Algorithmic Reasoning (MAR 2025)</span>. [<a href="https://arxiv.org/abs/2505.20715">arXiv</a>]</div>
+</div><div class="item">
+  <div class="pub-title">Visual Abstract Thinking Empowers Multimodal Reasoning</div>
+  <div class="small">Dairu Liu, Ziyue Wang, Minyuan Ruan, Fuwen Luo, Chi Chen, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">NeurIPS 2025 Workshop on Multimodal Algorithmic Reasoning (MAR 2025)</span>. [<a href="https://arxiv.org/abs/2505.20164">arXiv</a>]</div>
+</div><div class="item">
+  <div class="pub-title">Agent-Environment Alignment via Automated Interface Generation</div>
+  <div class="small">Kaiming Liu, Xuanyu Lei, Ziyue Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2505.21055">arXiv</a>] [<a href="talks/ALIGN-en.pdf">Slides</a>]</div>
 </div><div class="item">
   <div class="pub-title">Inference-Time Scaling for Generalist Reward Modeling</div>
   <div class="small">Zijun Liu, Peiyi Wang, Runxin Xu, Shirong Ma, Chong Ruan, <strong>Peng Li</strong>, Yang Liu, Yu Wu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2504.02495">arXiv</a>]</div>
 </div><div class="item">
   <div class="pub-title">LiloDriver: A Lifelong Learning Framework for Closed-loop Motion Planning in Long-tail Autonomous Driving Scenarios</div>
   <div class="small">Huaiyuan Yao, Pengfei Li, Bu Jin, Yupeng Zheng, An Liu, Lisen Mu, Qing Su, Qian Zhang, Yilun Chen, <strong>Peng Li</strong>. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2505.17209">arXiv</a>]</div>
-</div><div class="item">
-  <div class="pub-title">Visual Abstract Thinking Empowers Multimodal Reasoning</div>
-  <div class="small">Dairu Liu, Ziyue Wang, Minyuan Ruan, Fuwen Luo, Chi Chen, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2505.20164">arXiv</a>]</div>
 </div><div class="item">
   <div class="pub-title">A Survey of Efficient Reasoning for Large Reasoning Models: Language, Multimodality, and Beyond</div>
   <div class="small">Xiaoye Qu, Yafu Li, Zhaochen Su, Weigao Sun, Jianhao Yan, Dongrui Liu, Ganqu Cui, Daizong Liu, Shuxian Liang, Junxian He, <strong>Peng Li</strong>, Wei Wei, Jing Shao, Chaochao Lu, Yue Zhang, Xian-Sheng Hua, Bowen Zhou, Yu Cheng. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2503.21614">arXiv</a>] [<a href="https://github.com/XiaoYee/Awesome_Efficient_LRM_Reasoning">Project Webpage</a>]</div>
@@ -675,7 +678,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Oct 10, 2025</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Oct 18, 2025</span></div>
     </footer>
   </div>
 
