--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   
 </div><div class="item">
   <div class="pub-title">EditEval: Towards Comprehensive and Automatic Evaluation for Text-guided Video Editing</div>
-  <div class="small">Bingshuai Liu, Ante Wang, Zijun Min, Chenyang Lyu, Longyue Wang, Zhihao Wang, Xu Han, <strong>Peng Li</strong>, Jinsong Su. <span class="pub-venue">ACMMM 2025</span>. </div>
+  <div class="small">Bingshuai Liu, Ante Wang, Zijun Min, Chenyang Lyu, Longyue Wang, Zhihao Wang, Xu Han, <strong>Peng Li</strong>, Jinsong Su. <span class="pub-venue">ACM MM 2025</span>, 3507–3516. [<a href="https://dl.acm.org/doi/10.1145/3746027.3755100">pdf</a>]</div>
   
 </div><div class="item">
   <div class="pub-title">Advancing Language Multi-Agent Learning with Credit Re-Assignment for Interactive Environment Generalization</div>
@@ -229,7 +229,7 @@
 </div><div class="item">
   <div class="pub-title">MUSEG: Reinforcing Video Temporal Understanding via Timestamp-Aware Multi-Segment Grounding</div>
   <div class="small">Fuwen Luo, Shengfeng Lou, Chi Chen, Ziyue Wang, Chenliang Li, Weizhou Shen, Jiyue Guo, <strong>Peng Li</strong>, Ming Yan, Fei Huang, Yang Liu. <span class="pub-venue">NeurIPS 2025 Workshop on Multimodal Algorithmic Reasoning (MAR 2025)</span>. [<a href="https://arxiv.org/abs/2505.20715">arXiv</a>]</div>
-  
+  <div class="hl-line"><span class="hl">MAR 2025 Spotlight</span></div>
 </div><div class="item">
   <div class="pub-title">Visual Abstract Thinking Empowers Multimodal Reasoning</div>
   <div class="small">Dairu Liu, Ziyue Wang, Minyuan Ruan, Fuwen Luo, Chi Chen, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">NeurIPS 2025 Workshop on Multimodal Algorithmic Reasoning (MAR 2025)</span>. [<a href="https://arxiv.org/abs/2505.20164">arXiv</a>]</div>
@@ -325,7 +325,7 @@
 </div><div class="item">
   <div class="pub-title">EgoThink: Evaluating First-Person Perspective Thinking Capability of Vision-Language Models</div>
   <div class="small">Sijie Cheng, Zhicheng Guo, Jingwen Wu, Kechen Fang, <strong>Peng Li</strong>, Huaping Liu, Yang Liu. <span class="pub-venue">CVPR 2024</span>, 14291-14302. [<a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Cheng_EgoThink_Evaluating_First-Person_Perspective_Thinking_Capability_of_Vision-Language_Models_CVPR_2024_paper.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2311.15596">arXiv</a>] [<a href="https://github.com/AdaCheng/EgoThink">code</a>] [<a href="https://adacheng.github.io/EgoThink/">Project Webpage</a>]</div>
-  
+  <div class="hl-line"><span class="hl">CVPR 2025 Highlight</span></div>
 </div><div class="item">
   <div class="pub-title">FuseGen: PLM Fusion for Data-generation based Zero-shot Learning</div>
   <div class="small">Tianyuan Zou, Yang Liu, <strong>Peng Li</strong>, Jianqing Zhang, Jingjing Liu, Ya-Qin Zhang. <span class="pub-venue">EMNLP 2024</span>, 2172-2190. [<a href="https://aclanthology.org/2024.emnlp-main.130.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2406.12527">arXiv</a>] [<a href="https://github.com/LindaLydia/FuseGen">code</a>]</div>
@@ -834,7 +834,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Oct 24, 2025</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Oct 28, 2025</span></div>
     </footer>
   </div>
 
