--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
   <div class="small">Yuanhang Liu, Yanxing Huang, Yanqiao Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2505.22451">arXiv</a>] [<a href="talks/AIM-en.pdf">Slides</a>] [<a href="talks/AIM-zh.pdf">Slides (in Chinese)</a>] [<a href="https://ai-mathematician.net/">blog</a>]</div>
   
 </div><div class="item">
+  <div class="pub-title">AI Mathematician as a Partner in Advancing Mathematical Discovery - A Case Study in Homogenization Theory</div>
+  <div class="small">Yuanhang Liu, Beichen Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2510.26380">arXiv</a>]</div>
+  
+</div><div class="item">
   <div class="pub-title">ActiView: Evaluating Active Perception Ability for Multimodal Large Language Models</div>
   <div class="small">Ziyue Wang, Chi Chen, Fuwen Luo, Yurui Dong, Yuanchi Zhang, Yuzhuang Xu, Xiaolong Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">ACL 2025</span>, 7605-7633. [<a href="https://aclanthology.org/2025.acl-long.376.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2410.04659">arXiv</a>] [<a href="https://github.com/THUNLP-MT/ActiView">code</a>]</div>
   
@@ -834,7 +838,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Oct 28, 2025</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Oct 31, 2025</span></div>
     </footer>
   </div>
 
