--- a/index.html
+++ b/index.html
@@ -208,19 +208,19 @@
   
 </div><div class="item">
   <div class="pub-title">MUCAR: Benchmarking Multilingual Cross-Modal Ambiguity Resolution for Multimodal Large Language Models</div>
-  <div class="small">Xiaolong Wang, Zhaolu Kang, Wangyuxuan Zhai, Xinyue Lou, Yunghwei Lai, Ziyue Wang, Yawen Wang, Kaiyu Huang, Yile Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">EMNLP 2025</span>. [<a href="https://arxiv.org/abs/2506.17046">arXiv</a>]</div>
+  <div class="small">Xiaolong Wang, Zhaolu Kang, Wangyuxuan Zhai, Xinyue Lou, Yunghwei Lai, Ziyue Wang, Yawen Wang, Kaiyu Huang, Yile Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">EMNLP 2025</span>, 15037-15059. [<a href="https://aclanthology.org/2025.emnlp-main.760/">pdf</a>] [<a href="https://arxiv.org/abs/2506.17046">arXiv</a>]</div>
   
 </div><div class="item">
   <div class="pub-title">G2: Guided Generation for Enhanced Output Diversity in LLMs</div>
-  <div class="small">Zhiwen Ruan, Yixia Li, Yefeng Liu, Yun Chen, Weihua Luo, <strong>Peng Li</strong>, Yang Liu, Guanhua Chen. <span class="pub-venue">EMNLP 2025</span>. </div>
+  <div class="small">Zhiwen Ruan, Yixia Li, Yefeng Liu, Yun Chen, Weihua Luo, <strong>Peng Li</strong>, Yang Liu, Guanhua Chen. <span class="pub-venue">EMNLP 2025</span>, 14127-14145. [<a href="https://aclanthology.org/2025.emnlp-main.713/">pdf</a>]</div>
   
 </div><div class="item">
   <div class="pub-title">DongbaMIE: A Multimodal Information Extraction Dataset for Evaluating Semantic Understanding of Dongba Pictograms</div>
-  <div class="small">Xiaojun Bi, Shuo Li, Junyao Xing, Ziyue Wang, Fuwen Luo, Weizheng Qiao, Lu Han, Ziwei Sun, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">Findings of EMNLP 2025</span>. [<a href="https://arxiv.org/abs/2503.03644">arXiv</a>] [<a href="https://github.com/thinklis/DongbaMIE">code</a>] [<a href="https://huggingface.co/datasets/thinklis/DongbaMIE">Dataset</a>]</div>
+  <div class="small">Xiaojun Bi, Shuo Li, Junyao Xing, Ziyue Wang, Fuwen Luo, Weizheng Qiao, Lu Han, Ziwei Sun, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">Findings of EMNLP 2025</span>, 976-990. [<a href="https://aclanthology.org/2025.findings-emnlp.51/">pdf</a>] [<a href="https://arxiv.org/abs/2503.03644">arXiv</a>] [<a href="https://github.com/thinklis/DongbaMIE">code</a>] [<a href="https://huggingface.co/datasets/thinklis/DongbaMIE">Dataset</a>]</div>
   
 </div><div class="item">
   <div class="pub-title">PATIMT-Bench: A Multi-Scenario Benchmark for Position-Aware Text Image Machine Translation in Large Vision-Language Models</div>
-  <div class="small">Wanru Zhuang, Wenbo Li, Zhibin Lan, Xu Han, <strong>Peng Li</strong>, Jinsong Su. <span class="pub-venue">Findings of EMNLP 2025</span>. </div>
+  <div class="small">Wanru Zhuang, Wenbo Li, Zhibin Lan, Xu Han, <strong>Peng Li</strong>, Jinsong Su. <span class="pub-venue">Findings of EMNLP 2025</span>, 16572-16588. [<a href="https://aclanthology.org/2025.findings-emnlp.900/">pdf</a>]</div>
   
 </div><div class="item">
   <div class="pub-title">Beyond the Surface: Enhancing LLM-as-a-Judge Alignment with Human via Internal Representations</div>
@@ -838,7 +838,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Oct 31, 2025</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Nov 03, 2025</span></div>
     </footer>
   </div>
 
