--- a/index.html
+++ b/index.html
@@ -239,6 +239,10 @@
   <div class="small">Dairu Liu, Ziyue Wang, Minyuan Ruan, Fuwen Luo, Chi Chen, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">NeurIPS 2025 Workshop on Multimodal Algorithmic Reasoning (MAR 2025)</span>. [<a href="https://arxiv.org/abs/2505.20164">arXiv</a>]</div>
   
 </div><div class="item">
+  <div class="pub-title">Visual-Friendly Concept Protection via Selective Adversarial Perturbations</div>
+  <div class="small">Xiaoyue Mi, Fan Tang, Juan Cao, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">AISI 2026</span>. [<a href="https://arxiv.org/abs/2408.08518">arXiv</a>]</div>
+  
+</div><div class="item">
   <div class="pub-title">Agent-Environment Alignment via Automated Interface Generation</div>
   <div class="small">Kaiming Liu, Xuanyu Lei, Ziyue Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2505.21055">arXiv</a>] [<a href="talks/ALIGN-en.pdf">Slides</a>]</div>
   
@@ -361,10 +365,6 @@
 </div><div class="item">
   <div class="pub-title">StreamingBench: Assessing the Gap for MLLMs to Achieve Streaming Video Understanding</div>
   <div class="small">Junming Lin, Zheng Fang, Chi Chen, Zihao Wan, Fuwen Luo, <strong>Peng Li</strong>, Yang Liu, Maosong Sun. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2411.03628">arXiv</a>] [<a href="https://github.com/THUNLP-MT/StreamingBench">code</a>] [<a href="https://streamingbench.github.io/">Project Webpage</a>]</div>
-  
-</div><div class="item">
-  <div class="pub-title">Visual-Friendly Concept Protection via Selective Adversarial Perturbations</div>
-  <div class="small">Xiaoyue Mi, Fan Tang, Juan Cao, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2408.08518">arXiv</a>]</div>
   
 </div><div class="item">
   <div class="pub-title">Agent Hospital: A Simulacrum of Hospital with Evolvable Medical Agents</div>
@@ -838,7 +838,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Nov 03, 2025</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Nov 04, 2025</span></div>
     </footer>
   </div>
 
