--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
             Email
           </a>
           <a class="badge" href="https://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar</a>
+          <a class="badge" href="https://ai-mathematician.net">AI Mathematician Blog</a>
         </div>
       </div>
     </header>
@@ -838,7 +839,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Nov 04, 2025</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Nov 09, 2025</span></div>
     </footer>
   </div>
 
