--- a/index.html
+++ b/index.html
@@ -132,16 +132,28 @@
         <a class="btn" href="https://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">View on Google Scholar</a>
       </div>
       <details class="pub" open>
+  <summary>2026</summary>
+  <div class="two-col">
+    <div class="list">
+      <div class="item">
+  <div class="pub-title">Visual-Friendly Concept Protection via Selective Adversarial Perturbations</div>
+  <div class="small">Xiaoyue Mi, Fan Tang, Juan Cao, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">AISI 2026</span>. [<a href="https://arxiv.org/abs/2408.08518">arXiv</a>]</div>
+  
+</div>
+    </div>
+  </div>
+</details>
+<details class="pub" open>
   <summary>2025</summary>
   <div class="two-col">
     <div class="list">
       <div class="item">
   <div class="pub-title">AI Mathematician: Towards Fully Automated Frontier Mathematical Research</div>
-  <div class="small">Yuanhang Liu, Yanxing Huang, Yanqiao Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2505.22451">arXiv</a>] [<a href="talks/AIM-en.pdf">Slides</a>] [<a href="talks/AIM-zh.pdf">Slides (in Chinese)</a>] [<a href="https://ai-mathematician.net/">blog</a>]</div>
+  <div class="small">Yuanhang Liu, Yanxing Huang, Yanqiao Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2505.22451">arXiv</a>] [<a href="talks/AIM-en.pdf">Slides</a>] [<a href="talks/AIM-zh.pdf">Slides (in Chinese)</a>] [<a href="https://ai-mathematician.net/">Blog</a>]</div>
   
 </div><div class="item">
   <div class="pub-title">AI Mathematician as a Partner in Advancing Mathematical Discovery - A Case Study in Homogenization Theory</div>
-  <div class="small">Yuanhang Liu, Beichen Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">Preprint</span>. [<a href="https://arxiv.org/abs/2510.26380">arXiv</a>]</div>
+  <div class="small">Yuanhang Liu, Beichen Wang, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">ICAIS 2025</span>. [<a href="https://arxiv.org/abs/2510.26380">arXiv</a>] [<a href="https://ai-mathematician.net/en/posts/homogenization.theory/">Blog</a>]</div>
   
 </div><div class="item">
   <div class="pub-title">ActiView: Evaluating Active Perception Ability for Multimodal Large Language Models</div>
@@ -238,10 +250,6 @@
 </div><div class="item">
   <div class="pub-title">Visual Abstract Thinking Empowers Multimodal Reasoning</div>
   <div class="small">Dairu Liu, Ziyue Wang, Minyuan Ruan, Fuwen Luo, Chi Chen, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">NeurIPS 2025 Workshop on Multimodal Algorithmic Reasoning (MAR 2025)</span>. [<a href="https://arxiv.org/abs/2505.20164">arXiv</a>]</div>
-  
-</div><div class="item">
-  <div class="pub-title">Visual-Friendly Concept Protection via Selective Adversarial Perturbations</div>
-  <div class="small">Xiaoyue Mi, Fan Tang, Juan Cao, <strong>Peng Li</strong>, Yang Liu. <span class="pub-venue">AISI 2026</span>. [<a href="https://arxiv.org/abs/2408.08518">arXiv</a>]</div>
   
 </div><div class="item">
   <div class="pub-title">Agent-Environment Alignment via Automated Interface Generation</div>
@@ -825,7 +833,7 @@
           <li><strong>Demonstration Chair</strong>: CCL (2024)</li>
           <li><strong>Frontier Forum Chair</strong>: CCMT (2024)</li>
           <li><strong>Publicity Chair</strong>: CCL (2025)</li>
-          <li><strong>Reviewer / PC Member</strong>: NeurIPS (2022–2025), ICML (2022–2025), ICLR (2024–2025), ACL (2014, 2021–2023), EMNLP (2014, 2021–2023), NAACL (2018), CVPR (2023–2025<!--2026-->), ICCV (2023, 2025), ECCV (2024), AAAI (2022–2025), IJCAI (2022–2024), COLING (2020, 2024, 2025), BMVC (2024), COLM (2024–2025), ICRA (2025-2026), ACM TIST (2015), TACL (Standing Reviewer), Acta Automatica Sinica</li>
+          <li><strong>Reviewer / PC Member</strong>: NeurIPS (2022–2025), ICML (2022–2025), ICLR (2024–2025), ACL (2014, 2021–2023), EMNLP (2014, 2021–2023, 2025), NAACL (2018), CVPR (2023–2025<!--2026-->), ICCV (2023, 2025), ECCV (2024), AAAI (2022–2025), IJCAI (2022–2024), COLING (2020, 2024, 2025), BMVC (2024), COLM (2024–2025), ICRA (2025-2026), ACM TIST (2015), TACL (Standing Reviewer), Acta Automatica Sinica</li>
         </ul>
       </div>
     </section>
@@ -839,7 +847,7 @@
     </section>
 
     <footer class="section">
-      <div class="small">Last updated: <span id="lastUpdated">Nov 09, 2025</span></div>
+      <div class="small">Last updated: <span id="lastUpdated">Nov 11, 2025</span></div>
     </footer>
   </div>
 
